--- a/spmt/css/styles.css
+++ b/spmt/css/styles.css
@@ -18,6 +18,7 @@
   font-weight: normal;
   padding: 10px 0;
   width: 25%;
+  word-wrap: break-word;
 }
 
 .page-admin-config-spmt input.form-autocomplete,
