--- a/css/styles.css
+++ b/css/styles.css
@@ -1,18 +1,18 @@
-.page-admin-config-agora #edit-steps-btns-wrapper{
+.page-admin-config-agora-sp #edit-steps-btns-wrapper{
   display: none;
 }
 
-.page-admin-config-agora h1 {
+.page-admin-config-agora-sp h1 {
   text-transform: uppercase;
 }
 
-.page-admin-config-agora #mforms-wrapper-spmt {
+.page-admin-config-agora-sp #mforms-wrapper-spmt {
   margin-top: 40px;
   text-transform: initial;
 }
 
 /* Forms */
-.page-admin-config-agora .form-item label {
+.page-admin-config-agora-sp .form-item label {
   float: left;
   font-size: 14px;
   font-weight: normal;
@@ -21,29 +21,29 @@
   word-wrap: break-word;
 }
 
-.page-admin-config-agora input.form-autocomplete,
-.page-admin-config-agora input.form-text,
-.page-admin-config-agora input.form-file,
-.page-admin-config-agora textarea.form-textarea,
-.page-admin-config-agora select.form-multiselect,
-.page-admin-config-agora select.form-select {
+.page-admin-config-agora-sp input.form-autocomplete,
+.page-admin-config-agora-sp input.form-text,
+.page-admin-config-agora-sp input.form-file,
+.page-admin-config-agora-sp textarea.form-textarea,
+.page-admin-config-agora-sp select.form-multiselect,
+.page-admin-config-agora-sp select.form-select {
   border: 1px solid #ccc;
   font-size: 14px;
   padding: 10px;
 }
 
-.page-admin-config-agora input.form-text:focus,
-.page-admin-config-agora input.form-file:focus,
-.page-admin-config-agora textarea.form-textarea:focus,
-.page-admin-config-agora select.form-multiselect:focus,
-.page-admin-config-agora select.form-select:focus {
+.page-admin-config-agora-sp input.form-text:focus,
+.page-admin-config-agora-sp input.form-file:focus,
+.page-admin-config-agora-sp textarea.form-textarea:focus,
+.page-admin-config-agora-sp select.form-multiselect:focus,
+.page-admin-config-agora-sp select.form-select:focus {
   background: #fafafa;
   box-shadow: inset 0 1px 2px rgba(0,0,0,.1);
   outline: 0;
 }
 
-.page-admin-config-agora input.form-submit,
-.page-admin-config-agora a.button {
+.page-admin-config-agora-sp input.form-submit,
+.page-admin-config-agora-sp a.button {
   background: #48a9e4;
   border-radius: 2px;
   border: none;
@@ -60,29 +60,29 @@
   text-transform: uppercase;
 }
 
-.page-admin-config-agora input.form-submit:focus,
-.page-admin-config-agora input.form-submit:hover,
-.page-admin-config-agora a.button:focus,
-.page-admin-config-agora a.button:hover {
+.page-admin-config-agora-sp input.form-submit:focus,
+.page-admin-config-agora-sp input.form-submit:hover,
+.page-admin-config-agora-sp a.button:focus,
+.page-admin-config-agora-sp a.button:hover {
   background: #58bffd;
 }
 
 /* Multiselect */
-.page-admin-config-agora .multiselect {
+.page-admin-config-agora-sp .multiselect {
   display: block;
 }
 
-.page-admin-config-agora .form-type-multiselect label {
+.page-admin-config-agora-sp .form-type-multiselect label {
   width: 100%;
 }
 
-.page-admin-config-agora .multiselect-selector option {
+.page-admin-config-agora-sp .multiselect-selector option {
   font-size: 14px;
   padding: 2px 6px;
 }
 
-.page-admin-config-agora .multiselect_labels .label_unselected,
-.page-admin-config-agora .multiselect_labels .label_selected {
+.page-admin-config-agora-sp .multiselect_labels .label_unselected,
+.page-admin-config-agora-sp .multiselect_labels .label_selected {
   color: #333;
   float: none;
   font-size: 16px;
@@ -90,42 +90,42 @@
   text-transform: uppercase;
 }
 
-.page-admin-config-agora form .multiselect,
-.page-admin-config-agora .multiselect_labels {
+.page-admin-config-agora-sp form .multiselect,
+.page-admin-config-agora-sp .multiselect_labels {
   width: 750px;
 }
 
-.page-admin-config-agora .multiselect_available {
+.page-admin-config-agora-sp .multiselect_available {
   float: none;
   width: auto;
 }
 
-.page-admin-config-agora form .multiselect .multiselect-selector > div {
+.page-admin-config-agora-sp form .multiselect .multiselect-selector > div {
   flex-basis: 40%;
   padding: 0;
 }
 
-.page-admin-config-agora form .multiselect .multiselect-selector > ul {
+.page-admin-config-agora-sp form .multiselect .multiselect-selector > ul {
   flex-basis: 10%;
 }
 
-.page-admin-config-agora select.multiselect_sel,
-.page-admin-config-agora select.multiselect_unsel {
+.page-admin-config-agora-sp select.multiselect_sel,
+.page-admin-config-agora-sp select.multiselect_unsel {
   height: 100%;
   width: 100%;
 }
 
 /* Summary page */
-.page-admin-config-agora  fieldset {
+.page-admin-config-agora-sp  fieldset {
   border: 0 none;
 }
 
-.page-admin-config-agora fieldset .form-item label {
+.page-admin-config-agora-sp fieldset .form-item label {
   font-weight: bold;
   padding: 0;
 }
 
-.page-admin-config-agora .form-item div.description {
+.page-admin-config-agora-sp .form-item div.description {
   color: #333;
   font-size: 14px;
   font-weight: normal;
@@ -133,12 +133,12 @@
 }
 
 /* Messages */
-.page-admin-config-agora div.error {
+.page-admin-config-agora-sp div.error {
   background-color: #f52525;
   color: #fff;
 }
 
-.page-admin-config-agora div.warning {
+.page-admin-config-agora-sp div.warning {
   background-color: #ff9800;
   color: #fff;
 }
